--- a/src/app/inhouse/benign/benign.component.html
+++ b/src/app/inhouse/benign/benign.component.html
@@ -23,7 +23,7 @@
             <input type="text" class="input_01" placeholder="Genes" #genes>
             <button type="button" class="btn btn_02" (click)="search(genes.value)" >SEARCH</button>
         </div>
-    <div> Total: {{listBenigns.length}} Records  ({{curPage}} / {{totPage}}) Pages  </div>     
+    <div> Total: {{totRecords}} Records  ({{curPage}} / {{totPage}}) Pages  </div>     
     <div class="table-box-wrap">
         <div class="table-box box">
     
