--- a/src/app/inhouse/artifacts/artifacts.component.html
+++ b/src/app/inhouse/artifacts/artifacts.component.html
@@ -25,7 +25,7 @@
             <input type="text" class="input_01" placeholder="Genes" #genes>
             <button type="button" class="btn btn_02" (click)="search(genes.value)" >SEARCH</button>
         </div>
-    <div> Total: {{listArtfacts.length}} Records  ({{curPage}} / {{totPage}}) Pages  </div>     
+    <div> Total: {{totRecords}} Records  ({{curPage}} / {{totPage}}) Pages  </div>     
     <div class="table-box-wrap">
         <div class="table-box box"> 
             <table border="0" cellpadding="0" cellspacing="0" class="table_list " style="max-height:36px;"> 
