--- a/src/app/byengri/upload/upload.component.scss
+++ b/src/app/byengri/upload/upload.component.scss
@@ -99,8 +99,8 @@ input {
 
 
 .droparea.active {
-  border: 2px dashed #82e318;
-  background-color: #6db12e;
+  border: 2px dashed #1877e3;
+  background-color: #478ddd;
 }
 
 .file-list .list-group-item,
