--- a/src/app/byengri/byengri/report/report.component.html
+++ b/src/app/byengri/byengri/report/report.component.html
@@ -76,13 +76,13 @@
                   (change)="setTumorType(tumortype.value)">
               </td>
               <td class="txt_c">
-                <input type="text" size="30" #diagnosis class="clr-input" [value]="extraction.diagnosis"
-                  (change)="setDiagnosis(diagnosis.value)">
-                <!-- <textarea class="textarea_01" 
+                <!-- <input type="text" size="30" #diagnosis class="clr-input" [value]="extraction.diagnosis"
+                  (change)="setDiagnosis(diagnosis.value)"> -->
+                <textarea class="textarea_01" 
                                  #diagnosis  [value]="extraction.diagnosis"  [(ngModel)]="extraction.diagnosis" row=2
                                  (click)="diagnosisFocus()"
                                  style="width: 100%; height: 100%; border: none">
-                           </textarea> -->
+                           </textarea>
               </td>
             </tr>
           </tbody>
