--- a/src/app/forms/form2/form2.component.html
+++ b/src/app/forms/form2/form2.component.html
@@ -284,7 +284,8 @@
             <td><input type="text" size="10"  class="clr-input textcenter"  formControlName="igv"></td>
             <td><input type="text" size="10"  class="clr-input textcenter"  formControlName="sanger"></td>
             <td><input type="text" size="10"  class="clr-input textcenter"  formControlName="type"></td>
-            <td><input type="text" size="20"  class="clr-input textcenter" formControlName="gene"></td>
+            <td><input type="text" size="20" 
+                 class="clr-input textcenter" formControlName="gene"></td>
             <td><input type="text" size="10"  class="clr-input textcenter" formControlName="functionalImpact"></td>
             <td><input type="text" size="20"  class="clr-input textcenter" formControlName="transcript"></td> 
             <td><input type="text" size="15"  class="clr-input textcenter" formControlName="exonIntro"></td>
